--- a/anlib/build.gradle
+++ b/anlib/build.gradle
@@ -1,16 +1,16 @@
 apply plugin: 'com.android.library'
-
+group = 'com.github.nourbaha'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 27
 
 
 
     defaultConfig {
-        minSdkVersion 15
-        targetSdkVersion 26
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion 16
+        targetSdkVersion 27
+        versionCode 101
+        versionName "1.0.1"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -24,14 +24,27 @@ android {
     }
 
 }
-
+def androidVersion = '27.1.0'
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'com.android.support:appcompat-v7:26.0.0-alpha1'
+    compile "com.android.support:appcompat-v7:$androidVersion"
+    compile "com.android.support:support-compat:$androidVersion"
+    compile "com.android.support:design:$androidVersion"
+
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+
+    //Shared encrypted
+    compile 'com.orhanobut:hawk:2.0.1'
+
+    //Animation
+    compile 'com.airbnb.android:lottie:2.5.0'
+
+//    compile 'com.google.code.gson:gson:2.8.2'
+    compile 'com.github.hamsaadev:Persian-Date-Picker-Dialog:V1.2'
 //    testImplementation 'junit:junit:4.12'
 //    androidTestImplementation 'com.android.support.test:runner:1.0.1'
 //    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation 'com.github.bumptech.glide:glide:4.6.1'
-//    annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
 }
