--- a/anlib/src/main/AndroidManifest.xml
+++ b/anlib/src/main/AndroidManifest.xml
@@ -1,2 +1,7 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.nourbaha.anlib" />
+    package="com.nourbaha.anlib">
+
+    <application></application>
+
+</manifest>
