--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,11 @@ buildscript {
     
     repositories {
         google()
-        maven {
-            url 'https://maven.google.com'
-        }
+//        maven {
+//            url 'https://maven.google.com'
+//        }
         jcenter()
+        maven { url 'https://jitpack.io' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
@@ -21,10 +22,11 @@ buildscript {
 allprojects {
     repositories {
         google()
-        maven {
-            url 'https://maven.google.com'
-        }
+//        maven {
+//            url 'https://maven.google.com'
+//        }
         jcenter()
+        maven { url 'https://jitpack.io' }
     }
 }
 
